--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
 @import "varaible" ;
 @import "home/mixin" ;
 @import "home/home" ;
+@import url('http://fonts.cdnfonts.com/css/gotham');
+
+                
 
 *,*::after,*::before{
     margin: 0;
